syntax = "proto3";

package sec07;

import 'google/protobuf/empty.proto';

option java_multiple_files = true;
option java_package = "org.example.models";


message Output {
  int32 value = 1;
}

message RequestSize {
  int32 size =1 ;
}

service FlowControlService{
  rpc GetMessage(stream RequestSize)  returns  ( stream Output);
}